--- a/src/style.css
+++ b/src/style.css
@@ -38,3 +38,39 @@
 .centro{
     text-align:center
 }
+.stock{
+    font-weight: bold
+}
+.precio{
+    padding-left: 30%;
+}
+.btnPago{
+    padding-left: 30%;
+    display: flex;
+    flex-direction: row;
+    color:blue; 
+    align-items: center;
+}
+#pago{
+    margin-left: 5%;
+    align-items: center;
+}
+.tarjetadecredito{
+    height: 50px;
+}
+.boton{
+    margin-left: 10%;
+    color:white;
+    background-color: blue;
+}
+.estrella{
+    display: flex;
+    flex-direction: row;
+   align-items: center;
+}
+#estrella{
+     color: rgb(247, 232, 25);
+    border-width: 2px;
+    padding-right: 10px;
+    font-size:30px ;
+}
