--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,7 @@
+.hiden {
+    display: none;
+}
+
 .banner{
     height: 121;
     background-color: #258EC9;
@@ -37,4 +41,122 @@
 }
 .centro{
     text-align:center
+}
+
+
+.titulo {
+    padding-left: 15%;
+    margin: 20px 0px;
+}
+
+.inputNumero {
+    padding-left: 18%;
+    margin: 30px 0px;    
+}
+
+.inputNumber {
+    height: 35px;
+    width: 350px;
+    margin-left: 10%;
+    border-radius: 8px;
+    border: 1px solid #000;
+    box-shadow: 1px 2px #000;
+    outline: none;
+}
+
+.inputNombre {
+    padding-left: 18%;
+    margin: 25px 0px;
+}
+
+.inputName {
+    margin-left: 17%;
+    height: 35px;
+    width: 350px;
+    border-radius: 8px;
+    border: 1px solid #000;
+    box-shadow: 1px 2px #000;
+    outline: none;
+}
+
+.grupoValidar {
+    padding: 0% 18%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.tarjeta {
+    background: url(../src/imagenes/textura\ tarjeta.jpg);
+    background-size: cover;   
+    border-radius: 10px; 
+    width: 350px;
+    height: 200px;
+    padding: 10px 10px;
+    color: #fff;
+}
+
+.btnValidar {
+    width: 180px;
+    height: 50px;
+    margin-right: 100px;
+    background-color: #258EC9;
+    border: none;
+    border-radius: 10px;
+	color: #fff;
+	cursor: pointer;
+	font-size: 16px;
+	font-weight: bold;
+  	letter-spacing: 2px;
+	outline: none;
+}
+
+.tarjeta .title {
+    margin: 0px;
+    font-size: 12px;
+    color: red;
+}
+
+.datos {
+    margin-top: 70px;
+}
+
+.label {
+    margin: 4px;
+    color: #fff;
+    font-size: 14px;
+    letter-spacing: 1px;
+}
+
+.numero {
+    margin-top: 5px;
+    margin-bottom: 20px;
+}
+
+.nombre {
+    margin-top: 5px;
+    margin-bottom: 20px;
+}
+
+.validacion {
+    padding: 0% 20%;
+    margin: 40px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.btnComprar {
+    width: 200px;
+    height: 50px;
+    margin-right: 100px;
+    background-color: #258EC9;
+    border: none;
+    border-radius: 10px;
+	color: #fff;
+	cursor: pointer;
+	font-size: 16px;
+	font-weight: bold;
+  	letter-spacing: 1px;
+	outline: none;
 }
