--- a/src/style.css
+++ b/src/style.css
@@ -8,8 +8,6 @@ body {
     display: none;
 }
 
-
-
 .banner{
     height: 100px;
     background-color: #258EC9;
@@ -249,6 +247,16 @@ body {
 	outline: none;
 }
 
+.msjExitoso {
+    display: flex;
+    margin: 150px 200px;
+    flex-direction: column;
+    align-items: center;
+    border: 2px solid #2E4E7D;
+    padding: 50px;
+    border-radius: 10px;
+}
+
 .footer {
     background: #2E4E7D;
     height: 100px;
@@ -262,6 +270,11 @@ body {
     font-size: 12px;
     margin-top: 20px;
 }
+
 .pantalla2 {
+    display: none;
+}
+
+.pantalla3 {
     display: none;
 }
