Trabajando en imagenes para Readme

--- a/src/style.css
+++ b/src/style.css
@@ -24,7 +24,7 @@ body {
     color:white;
     font-family: 'Wendy One', sans-serif;
     padding-left: 5%;
-    widows: 300px; ;
+    widows: 300px; 
 }
 
 .mouse{
